Fix z-index for nested tab navbar menu

--- a/src/app/cris-layout/cris-layout-loader/cris-layout-horizontal/cris-layout-navbar/cris-layout-navbar.component.scss
+++ b/src/app/cris-layout/cris-layout-loader/cris-layout-horizontal/cris-layout-navbar/cris-layout-navbar.component.scss
@@ -1,3 +1,6 @@
+.cris-layout-navbar {
+  z-index: 1;
+}
 .navbar-nav{
 	justify-content: flex-start;
     height: 60px;
